add_subdirectory(problem1)
add_subdirectory(problem2)
add_subdirectory(problem3)
add_subdirectory(problem4)
add_subdirectory(problem5)
add_subdirectory(problem6)
add_subdirectory(problem7)
add_subdirectory(problem8)
add_subdirectory(problem9)
add_subdirectory(problem10)
add_subdirectory(problem11)
add_subdirectory(problem12)
add_subdirectory(problem13)
add_subdirectory(problem14)
add_subdirectory(problem15)
add_subdirectory(problem16)
add_subdirectory(problem17)


add_subdirectory(problem24)

